test/test_examples/syntactic_examples/syntax_error/error_prologue_03.zig
// Syntax error: incorrect variable identifier in prologue

const ial = @import("ifj24.zig"); 

pub fn main() void {

}  